fix(shs-6613): order of gap

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_curriculum-map.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_curriculum-map.scss
@@ -51,7 +51,7 @@ $cmap-colors: (
 
     .hb-raised-cards--uniform-height & {
       grid-auto-rows: auto;
-      gap: var(--grid-layout-gap) 0;
+      gap: 0 var(--grid-layout-gap);
 
       & > .paragraph-item {
         display: grid;
